# loadbearing_youtube

./: .env.example  .gitignore  README.md  pyproject.toml
src/loadbearing/: __init__.py  cli.py  config.py  pipeline.py
src/loadbearing/analysis/: __init__.py  chunking.py  prompts.py
src/loadbearing/providers/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py
src/loadbearing/sources/: base.py  youtube.py
src/loadbearing_youtube/: __init__.py  cli.py  config.py  models.py  pipeline.py  render.py
src/loadbearing_youtube/analysis/: loadbearing.py
src/loadbearing_youtube/providers/: anthropic_provider.py  openai_provider.py
src/loadbearing_youtube/sources/: __init__.py
tests/: test_analyzer.py  test_chunking.py  test_registry.py  test_youtube_url.py
