[project]
name = "loadbearing-youtube"
version = "0.1.0"
description = "Extract a YouTube transcript and expose its load-bearing components. First in the loadbearing_* family."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Larry Dawson" }]
keywords = ["youtube", "transcript", "summary", "llm", "analysis"]

dependencies = [
    "youtube-transcript-api>=1.0,<2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.39"]
dotenv = ["python-dotenv>=1.0"]
all = ["openai>=1.0", "anthropic>=0.39", "python-dotenv>=1.0"]
dev = ["pytest>=8.0"]

[project.scripts]
loadbearing-youtube = "loadbearing_youtube.cli:main"
lby = "loadbearing_youtube.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loadbearing_youtube"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
